[package]
name = "oat_python"
version         =   "0.1.0"
authors         =   ["Gregory Henselman-Petrusek Roek<gregory.roek@pnnl.gov>"]
edition         =   "2018"
license-file    =   "LICENSE.md"
description     =   "User-friendly tools for applied topology in Python"
homepage        =   "https://openappliedtopology.github.io"
repository      =   "https://github.com/OpenAppliedTopology/oat_python"
categories      =   ["mathematics", "science"]
keywords        =   ["data", "geometry", "machine learning"]

[lib]
name = "oat_python"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

# [dependencies.pyo3]
# version = "0.15.0"
# features = ["extension-module"]

[dependencies]
derive-getters = "0.2.0"
indicatif = "0.17.3"
itertools = "0.10.0"
log = "0.4.14"
num = "0.4.0"
# numpy = "0.14"
# ndarray = ">= 0.13, < 0.16"
ordered-float = "3.4.0"
# pyo3-log = "0.5.0"
# polars = "0.28.0"
# pyo3-polars = "0.2.1"
pyo3 = { version = "0.19.2", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
oat_rust = { path = "../oat_rust" }
sprs = "0.11.0"



[package.metadata.maturin]
requires = ["maturin", "numpy", "pandas", "matplotlib", "scikit-learn", "plotly", "networkx", "scipy", "nbformat", "kaleido"]  # Add your Python dependencies here