[project]
name = "oat_python"
version = "0.0.1"
authors = [
  { name="Gregory Henselman-Petrusek Roek", email="gregory.roek@pnnl.gov" },
]
description = "Python bindings for the oat_rust library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"