[package]
# package information is automatically merged from Cargo.toml



[build-system]
requires = ["maturin>=1.0,<2.0", "setuptools>=61.0"]
build-backend = "maturin"



[project]
name                =   "oat_python"  # Add this field (this is likely the source of your error)
version             =   "0.2.0"
dependencies        =   [   
                            # The dependencies listed below will be installed automatically when users install the package on Python
                            "hypernetx",
                            "IPython",
                            "kaleido",
                            "matplotlib",
                            "maturin", 
                            "nbformat", 
                            "networkx", 
                            "numpy", 
                            "pandas",  
                            "plotly", 
                            "scikit-learn", 
                            "scipy",
                            "tqdm",
                            "sphinx",
                            "sphinx_rtd_theme",
                            "sphinx_gallery",
                            "sphinx_autodoc_typehints",
                        ]  

[tool.maturin]
python-source = "python"
module-name = "oat_python.core"   


[tool.setuptools.package-data]
oat_python = ["data/*.txt"]